--- a/front/src/login/login.css
+++ b/front/src/login/login.css
@@ -259,6 +259,13 @@
   color: #fecaca;
 }
 
+.login-alert--info {
+  background: rgba(56, 189, 248, 0.12);
+  border: 1px solid rgba(56, 189, 248, 0.35);
+  color: #bae6fd;
+  box-shadow: inset 0 0 0 1px rgba(56, 189, 248, 0.15);
+}
+
 .remember-toggle {
   display: flex;
   align-items: center;
