--- a/front/src/index.css
+++ b/front/src/index.css
@@ -29,6 +29,16 @@ body {
   min-height: 100vh;
 }
 
+.auth-gate {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.125rem;
+  color: #1f2937;
+  background-color: #f4f6fb;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
